# TrendFollowingSystems

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
examples/: analytic_sharpe_vs_span.py  backtest_european_system.py  predict_sharpe_from_acf.py
papers/tf_systems/: .gitignore  Makefile  README.md
papers/tf_systems/paper/: TrendFollowing_PaperA_SIFIN_v1.tex  TrendFollowing_PaperA_SIFIN_v1.thm
papers/tf_systems/replication/: aggregated_skewness_fig.py  atr_vs_vol.py  autocorr_attribution.py  backtest_figs.py  cross_system_attribution.py  cross_system_attribution_best.py  cross_system_attribution_figs.py  cross_system_panel_c.py  estimate_arfima.py  ewma_variance_check.py  figpass_orchestrate.py  figpass_plot.py  filter_figs.py  gen_arfima_net.py  gen_wn_net.py  grid_search_systems.py  illustrate_systems.py  mc_expected_return_figs.py  mc_net_sharpe_paper_figs.py  mc_sharpe.py  mc_sharpe_figs.py  net_sharpe_analysis.py  net_sharpe_span.py  optimal_span.py  reproduce_all_figures.py  sg_sharpe_test.py  t6_assemble.py  t6_kappa_column.py  t6_ls_parts.py  verify_arfima_variance_scale.py  verify_asymptotics.py  verify_cumreturn_boundary.py  verify_garch_and_truncation.py  verify_ls_normalization.py  verify_skewness_directions.py  wn_orchestrate.py
papers/tf_systems/replication/results/: expected_return_ar_part_0.pkl  expected_return_arfima1_part_1.pkl  expected_return_arfima1_part_2.pkl  expected_return_white_noise_part_2.pkl  grid_cache.pkl
resources/: README.md
resources/futures/: tf_system_data_descriptive_df.csv  tf_system_data_ohlc_es1.csv
resources/papers/smart_diversification/data/: fig_smart_diversification_data.csv  fig_smart_diversification_frontier.csv  fund_benchmark_row.csv  fund_input_sheet.csv  fund_input_sheet_with_qis.csv  fund_panel_monthly_excess.csv  fund_panel_monthly_excess_with_qis.csv  long_vol_qis_prices.csv  overlay_universe_prices.csv  (+1 more)
tests/: test_sharpe.py  test_sharpe_shared.py  test_sharpe_test.py  test_skewness.py  test_smart_diversification.py  test_universe.py
trendfollowing/: __init__.py  backtests.py  conventions.py  local_path.py  settings.yaml  universe.py
trendfollowing/analysis/: __init__.py  autocorr_analysis.py  check_vol_target.py  signal_plots.py  simple_backtest.py  tf_signal_screener.py  trade_ar_process.py
trendfollowing/analytics/: __init__.py  autocorrelation.py  expected_return.py  filters.py  sharpe.py  sharpe_test.py  skewness.py
trendfollowing/processes/: __init__.py  arfima.py  path_engine.py
trendfollowing/resources/: tf_system_data_benchmark_prices.csv  tf_system_data_ohlc_gc1.csv  tf_system_data_ohlc_ty1.csv
trendfollowing/systems/: __init__.py  american.py  backtest_utils.py  european.py  tsmom.py
(+23 files in other folders)
